# sol_did

./: Anchor.toml  Cargo.toml  NOTICE
programs/sol_did/: Cargo.toml
programs/sol_did/src/: lib.rs
programs/sol_did/src/instructions/: initialize.rs  migrate.rs
programs/sol_did/src/integrations/: is_authority.rs
programs/sol_did/src/legacy/: legacy_did_account.rs
programs/sol_did/src/state/: did_account.rs
tests/: sol_did.ts
