[package]
name = "sol-did"
version = "3.3.0"
description = "Original Author: Martin Riedel, Repo Author: Chris Madison"
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/tankcdr/sol_did"
license = "MIT"
keywords = ["did", "solana", "identity", "did-method"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_did"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
bitflags = "1.3.2"
borsh = "0.9.3"
itertools = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.14.11"
solana-security-txt = "1.1.0" 
